--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <nav class="nav-bar">
         <div class="nav-hold">
-            <a href="#" class="nav-logo">Varun Saini</a>
+            <a href="#" class="nav-logo">VS</a>
             <a id="nav-menu" class="nav-menu">&#9776;</a>
             <ul class="nav-list nav-open" id="nav">
                 <li><a href="http://varunksaini.com">Blog</a></li>
